# HACKTheShelf

./: .gitignore  Inicio.py  LICENSE  README.md  mongo_bson_gen  pyproject.toml  todo.md
api/: mongo_connection.py  newtry.py  prueba.py
models/: LLMs.py  image_analyzer.ipynb  image_analyzer.py  pipeline_crop.py
pages/: GeneradorPlanogramas.py  analisis_imagen.py
